Fix archive links on mobile

--- a/assets/css/pages/archive.less
+++ b/assets/css/pages/archive.less
@@ -46,17 +46,21 @@ main.archive {
     height: 40px;
     border-top: 1px solid @color-border--light-gray;
 
-    i {
-      display: inline-block;
-      vertical-align: middle;
-      line-height: 40px;
-      width: 40px;
-      height: 100%;
-      text-align: center;
-      color: @color-text--muted;
-      font-size: 16px;
-      background: #fff;
-      border-right: 1px solid @color-border--light-gray;
+    > i {
+      display: none;
+
+      @media (min-width: @tablet-vertical) {
+        display: inline-block;
+        vertical-align: middle;
+        line-height: 40px;
+        width: 40px;
+        height: 100%;
+        text-align: center;
+        color: @color-text--muted;
+        font-size: 16px;
+        background: #fff;
+        border-right: 1px solid @color-border--light-gray;
+      }
     }
 
     .url {
@@ -66,6 +70,14 @@ main.archive {
       text-align: center;
       line-height: 40px;
       text-decoration: none;
+
+      code {
+        margin-right: 15px;
+
+        @media (min-width: @tablet-vertical) {
+          margin-right: 0;
+        }
+      }
 
       &:not(:last-of-type) {
         border-right: 1px solid @color-border--light-gray;
